frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermgmt-app
  labels:
    app: usermgmt-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermgmt-webapp
  template:
    metadata:
      labels:
        app: usermgmt-webapp
    spec:
      containers:
      - name: usrmgmt-webapp
        image: stacksimplify/kube-usermgmt-webapp:1.0.0-MySQLDB
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
