myapp2service.yml
apiVersion: v1
kind: Service
metadata:
  name: app3-nginx
  labels:
    app: myapp3 #the label we have defined inside deployment defination need to be m
spec:
  type: NodePort
  selector:
    app: app: myapp3 #the label we have defined inside deployment defination need to be m
  ports:
  - port: 80
    targetPort: 80
