service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend

spec:
  type: LoadBalancer
  selector:
    app: myapp3 
  ports:
    - name: http
      port: 80
      targetPort: 80
